[gd_scene load_steps=4 format=3 uid="uid://kn6ykqolgoae"]

[ext_resource type="Script" uid="uid://dsqvxeua2gul6" path="res://Players/cat_player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://b64o2v13ocraa" path="res://Players/cat_2.tscn" id="2_onrkg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_onrkg"]
size = Vector3(0.166767, 0.474609, 0.704529)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00507279, 0.262695, -0.0675964)
shape = SubResource("BoxShape3D_onrkg")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, -0.35)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 4.47035e-08, 0, -4.47035e-08, 1, 0, 0.390737, 1.07603)
current = true
fov = 60.0
near = 0.005

[node name="Cat2" parent="." instance=ExtResource("2_onrkg")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0.278304, -0.0270927)
